[metadata]
name = syseleven.cloudutilslibs
summary = Libs for the cloud
description-file = README.md
author = Stefan Andres
author-email = s.andres@syseleven.de
home-page = www.syseleven.de
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages = syseleven
namespace_packages = syseleven

[pbr]
warnerrors = True
